package eapli.elearning.sharedboardmanagement.domain;

public enum SharedBoardState {
    INACTIVE,
    ACTIVE,
    ARCHIVED
}
